platform-charts/username-test4/templates/network/username-web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  type: ClusterIP
  selector:
    app: web2
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
