platform-charts/username-test4/templates/network/username-web2-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web2
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "web2.192.168.100.243.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web2
          port: 80
